feat: :sparkles: sending email with AWS SES
Envio de email com o SES da AWS

--- a/backend/src/modules/accounts/views/emails/forgotPassword.hbs
+++ b/backend/src/modules/accounts/views/emails/forgotPassword.hbs
@@ -1,33 +1,40 @@
-<style>
-  .container {
-    width: 800px;
-    font-family: Arial, Helvetica, sans-serif;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
+<!DOCTYPE html>
+<html lang="pt-br">
 
-  span {
-    margin: 10px;
-  }
-</style>
+<head>
+  <style>
+    .container {
+      width: 800px;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-<div class="container">
-  <img src="https://i.imgur.com/oUAKMC5.png">
+    span {
+      margin: 10px 0px;
+      display: block;
+    }
+  </style>
+</head>
 
-  <span>Oi, {{name}}</span>
+<body>
+  <div class="container">
+    <img src="https://i.imgur.com/oUAKMC5.png">
 
-  <br />
+    <span>Oi, {{name}}</span>
 
-  <span>Você solicitou alteração de senha.</span>
-  <span>
-    Para relizar a troca, clique no link
-    <a href={{link}}>{{link}}</a>
-  </span>
+    <br />
 
-  <span>Caso não tenha sido você que solicitou a alteração da senha, ignore este e-mail.</span>
+    <span>Você solicitou alteração de senha.</span>
+    <span>
+      Para relizar a troca, clique no link
+      <a href={{link}}>{{link}}</a>
+    </span>
 
-  <strong>Obrigado!</strong>
+    <span>Caso não tenha sido você que solicitou a alteração da senha, ignore este e-mail.</span>
 
-  <h3>Equipe | <strong>RentX</strong></h3>
-</div>
+    <strong>Obrigado!</strong>
+
+    <h3>Equipe | <strong>RentX</strong></h3>
+  </div>
+</body>
+
+</html>
